# tre

./: configure.ac
lib/: Makefile.am  README  regcomp.c  regexec.c  tre-ast.c  tre-compile.c  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-mem.c  tre-parse.c  tre-stack.c
tests/: Makefile.am  axy.c  bench.c  bore.c  randtest.c  retest.c
win32/: tre-config.h  tre-config.h.in
